--- a/RouteMasterFrontend/appsettings.json
+++ b/RouteMasterFrontend/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "RouteMaster": "Data Source=.; Initial Catalog=RouteMaster; User ID=sa5; Password=sa5;  MultipleActiveResultSets=true; TrustServerCertificate=true"
+        "RouteMaster": "Data Source=.; Initial Catalog=RouteMasterTest; User ID=sa5; Password=sa5;  MultipleActiveResultSets=true; TrustServerCertificate=true"
     },
     "GoogleApiClientId": "161026089487-tl7dobkpg2r05cnahqrho3af1vdjn33q.apps.googleusercontent.com",
 
